--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/lngText"
+        android:id="@+id/usernameText"
         android:layout_width="120dp"
         android:layout_height="53dp"
         android:layout_marginTop="40dp"
@@ -53,7 +53,7 @@
         app:layout_constraintHorizontal_bias="0.204"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lngText" />
+        app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
 
     <Button
@@ -90,7 +90,7 @@
         android:id="@+id/serverResponseText"
         android:layout_width="330dp"
         android:layout_height="115dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="292dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/black"
@@ -101,7 +101,6 @@
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
