--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,48 +10,47 @@
         android:id="@+id/usernameText"
         android:layout_width="363dp"
         android:layout_height="69dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:hint="Username"
-        app:layout_constraintBottom_toTopOf="@+id/passwordText"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.357" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <EditText
         android:id="@+id/passwordText"
         android:layout_width="363dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="36dp"
+        android:layout_height="57dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/newAccountBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
     <Button
-        android:id="@+id/newAccountBtn"
+        android:id="@+id/loginBtn"
         android:layout_width="167dp"
         android:layout_height="81dp"
-        android:layout_marginBottom="180dp"
+        android:layout_marginBottom="196dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordText"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="385dp"
-        android:layout_height="341dp"
+        android:layout_width="471dp"
+        android:layout_height="377dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
@@ -62,7 +61,7 @@
         app:srcCompat="@drawable/lock_2" />
 
     <Button
-        android:id="@+id/newAccountBtn"
+        android:id="@+id/createNewAccountBtn"
         android:layout_width="173dp"
         android:layout_height="66dp"
         android:layout_marginBottom="32dp"
@@ -76,11 +75,12 @@
 
     <TextView
         android:id="@+id/responseText"
-        android:layout_width="210dp"
-        android:layout_height="61dp"
+        android:layout_width="218dp"
+        android:layout_height="88dp"
         android:layout_marginBottom="32dp"
         android:layout_marginStart="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="32dp" />
 
 </android.support.constraint.ConstraintLayout>
