--- a/app/src/main/res/layout/activity_list_encryptions.xml
+++ b/app/src/main/res/layout/activity_list_encryptions.xml
@@ -6,4 +6,106 @@
     android:layout_height="match_parent"
     tools:context="halcyon_daze.github.io.sdsecure.listEncryptions">
 
+    <TableLayout
+        android:layout_width="567dp"
+        android:layout_height="745dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/elementNum"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:ems="10"
+                    android:inputType="number"
+                    android:text="No"
+                    android:textSize="24sp"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="2dp" />
+
+                <TextView
+                    android:id="@+id/latitudeText"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/elementNum"
+                    android:layout_toEndOf="@+id/elementNum"
+                    android:layout_toRightOf="@+id/elementNum"
+                    android:text="Latitude"
+                    android:textSize="24sp"
+                    tools:layout_editor_absoluteX="425dp"
+                    tools:layout_editor_absoluteY="40dp" />
+
+                <TextView
+                    android:id="@+id/longitudeText"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/latitudeText"
+                    android:layout_alignBottom="@+id/latitudeText"
+                    android:layout_toEndOf="@+id/latitudeText"
+                    android:layout_toRightOf="@+id/latitudeText"
+                    android:text="Longitude"
+                    android:textSize="24sp"
+                    tools:layout_editor_absoluteX="314dp"
+                    tools:layout_editor_absoluteY="40dp" />
+
+                <TextView
+                    android:id="@+id/operationText"
+                    android:layout_width="125dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/longitudeText"
+                    android:layout_toEndOf="@+id/longitudeText"
+                    android:layout_toRightOf="@+id/longitudeText"
+                    android:text="Operation"
+                    android:textSize="24sp"
+                    tools:layout_editor_absoluteX="77dp"
+                    tools:layout_editor_absoluteY="0dp" />
+
+                <TextView
+                    android:id="@+id/lastTimeText"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/longitudeText"
+                    android:layout_toEndOf="@+id/longitudeText"
+                    android:layout_toRightOf="@+id/longitudeText"
+                    android:text="Last Time"
+                    android:textSize="24sp"
+                    tools:layout_editor_absoluteX="77dp"
+                    tools:layout_editor_absoluteY="0dp" />
+            </LinearLayout>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/cardList"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </TableLayout>
 </android.support.constraint.ConstraintLayout>
