--- a/app/src/main/res/layout/card_info_row.xml
+++ b/app/src/main/res/layout/card_info_row.xml
@@ -14,6 +14,8 @@
         android:layout_alignParentTop="true"
         android:ems="10"
         android:inputType="number"
+        android:paddingBottom="2dp"
+        android:paddingLeft="4dp"
         android:text="elementNum"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="0dp"
@@ -26,6 +28,7 @@
         android:layout_alignBottom="@+id/elementNum"
         android:layout_toEndOf="@+id/elementNum"
         android:layout_toRightOf="@+id/elementNum"
+        android:paddingBottom="2dp"
         android:text="Latitude"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="425dp"
@@ -39,6 +42,7 @@
         android:layout_alignBottom="@+id/latitudeText"
         android:layout_toEndOf="@+id/latitudeText"
         android:layout_toRightOf="@+id/latitudeText"
+        android:paddingBottom="2dp"
         android:text="Longitude"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="314dp"
@@ -51,6 +55,7 @@
         android:layout_alignTop="@+id/longitudeText"
         android:layout_toEndOf="@+id/longitudeText"
         android:layout_toRightOf="@+id/longitudeText"
+        android:paddingBottom="2dp"
         android:text="Status"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="77dp"
@@ -63,6 +68,7 @@
         android:layout_alignTop="@+id/longitudeText"
         android:layout_toEndOf="@+id/longitudeText"
         android:layout_toRightOf="@+id/longitudeText"
+        android:paddingBottom="2dp"
         android:text="Last Time"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="77dp"
