--- a/app/src/main/res/layout/activity_list_encryptions.xml
+++ b/app/src/main/res/layout/activity_list_encryptions.xml
@@ -9,10 +9,15 @@
     <TableLayout
         android:layout_width="567dp"
         android:layout_height="745dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.123">
 
         <TableRow
             android:layout_width="match_parent"
