--- a/app/src/main/res/layout/fragment_blue_tooth.xml
+++ b/app/src/main/res/layout/fragment_blue_tooth.xml
@@ -4,21 +4,37 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textAlignment="center"
     tools:context="halcyon_daze.github.io.sdsecure.BlueToothFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
         android:id="@+id/updateText"
-        android:layout_width="342dp"
+        android:layout_width="402dp"
         android:layout_height="93dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="284dp"
-        android:text="Awaiting response from device..."
+        android:layout_marginTop="224dp"
+        android:text="Start polling for devices?"
+        android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/bluetoothSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="56dp"
+        android:text="ToggleButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/updateText"
+        app:layout_constraintVertical_bias="0.07" />
 </android.support.constraint.ConstraintLayout>
