--- a/app/src/main/res/layout/activity_list_encryptions.xml
+++ b/app/src/main/res/layout/activity_list_encryptions.xml
@@ -10,9 +10,11 @@
         android:layout_width="567dp"
         android:layout_height="745dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.205">
 
         <TableRow
             android:layout_width="match_parent"
@@ -32,7 +34,7 @@
                     android:layout_alignParentTop="true"
                     android:ems="10"
                     android:inputType="number"
-                    android:text="No"
+                    android:text="#"
                     android:textSize="24sp"
                     tools:layout_editor_absoluteX="0dp"
                     tools:layout_editor_absoluteY="2dp" />
