--- a/app/src/main/res/layout/fragment_blue_tooth.xml
+++ b/app/src/main/res/layout/fragment_blue_tooth.xml
@@ -25,13 +25,14 @@
 
     <ToggleButton
         android:id="@+id/bluetoothSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="195dp"
+        android:layout_height="86dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="56dp"
         android:text="ToggleButton"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
