--- a/app/src/main/res/layout/activity_list_encryptions_phone.xml
+++ b/app/src/main/res/layout/activity_list_encryptions_phone.xml
@@ -7,12 +7,15 @@
     tools:context="halcyon_daze.github.io.sdsecure.listEncryptions">
 
     <TableLayout
-        android:layout_width="567dp"
-        android:layout_height="745dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.205">
 
         <TableRow
             android:layout_width="match_parent"
@@ -25,66 +28,66 @@
 
                 <TextView
                     android:id="@+id/elementNum"
-                    android:layout_width="40dp"
+                    android:layout_width="25sp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:ems="10"
                     android:inputType="number"
-                    android:text="No"
-                    android:textSize="24sp"
-                    tools:layout_editor_absoluteX="0dp"
-                    tools:layout_editor_absoluteY="2dp" />
+                    android:text="#"
+                    android:textSize="16sp"
+                    tools:layout_editor_absoluteX="0sp"
+                    tools:layout_editor_absoluteY="2sp" />
 
                 <TextView
                     android:id="@+id/latitudeText"
-                    android:layout_width="120dp"
+                    android:layout_width="80sp"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/elementNum"
                     android:layout_toEndOf="@+id/elementNum"
                     android:layout_toRightOf="@+id/elementNum"
                     android:text="Latitude"
-                    android:textSize="24sp"
-                    tools:layout_editor_absoluteX="425dp"
-                    tools:layout_editor_absoluteY="40dp" />
+                    android:textSize="18sp"
+                    tools:layout_editor_absoluteX="425sp"
+                    tools:layout_editor_absoluteY="40sp" />
 
                 <TextView
                     android:id="@+id/longitudeText"
-                    android:layout_width="120dp"
+                    android:layout_width="80sp"
                     android:layout_height="wrap_content"
                     android:layout_alignBaseline="@+id/latitudeText"
                     android:layout_alignBottom="@+id/latitudeText"
                     android:layout_toEndOf="@+id/latitudeText"
                     android:layout_toRightOf="@+id/latitudeText"
                     android:text="Longitude"
-                    android:textSize="24sp"
-                    tools:layout_editor_absoluteX="314dp"
-                    tools:layout_editor_absoluteY="40dp" />
+                    android:textSize="16sp"
+                    tools:layout_editor_absoluteX="314sp"
+                    tools:layout_editor_absoluteY="40sp" />
 
                 <TextView
                     android:id="@+id/operationText"
-                    android:layout_width="125dp"
+                    android:layout_width="75sp"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/longitudeText"
                     android:layout_toEndOf="@+id/longitudeText"
                     android:layout_toRightOf="@+id/longitudeText"
                     android:text="Operation"
-                    android:textSize="24sp"
-                    tools:layout_editor_absoluteX="77dp"
-                    tools:layout_editor_absoluteY="0dp" />
+                    android:textSize="16sp"
+                    tools:layout_editor_absoluteX="77sp"
+                    tools:layout_editor_absoluteY="0sp" />
 
                 <TextView
                     android:id="@+id/lastTimeText"
-                    android:layout_width="160dp"
+                    android:layout_width="115sp"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/longitudeText"
                     android:layout_toEndOf="@+id/longitudeText"
                     android:layout_toRightOf="@+id/longitudeText"
                     android:text="Last Time"
-                    android:textSize="24sp"
-                    tools:layout_editor_absoluteX="77dp"
-                    tools:layout_editor_absoluteY="0dp" />
+                    android:textSize="16sp"
+                    tools:layout_editor_absoluteX="77sp"
+                    tools:layout_editor_absoluteY="0sp" />
             </LinearLayout>
 
         </TableRow>
